--- a/sites/dev/ibmservicevirtmicrosite/css/style.css
+++ b/sites/dev/ibmservicevirtmicrosite/css/style.css
@@ -91,13 +91,13 @@ audio, canvas, video { display: inline-block; *display: inline; *zoom: 1; }
 #micrositeContent h4, #micrositeContent h4 a{color:#00679c;font-size: 13px;line-height: 1.3; text-decoration: none;}
 #micrositeContent h4 a:hover{color:#00679c;font-size: 13px;line-height: 1.3; text-decoration: underline;}
 #micrositeContentColumnFull {margin: 0 0 18px; }
-#micrositeContentColumnFull .introText {padding:15px 0 0;}
-#micrositeContentColumnFull .introText img{float: right; height: 158px; margin:-15px 0 0;width: 322px;}
-#micrositeContentColumnFull .introText h3{margin:0 0 .5em;}
-#micrositeContentColumnFull .introText p{font-size: 14px; line-height: 1.5; width: 620px;}
+#micrositeContentColumnFull .introText {padding:0;}
+#micrositeContentColumnFull .introText img{float: right; height: 158px; margin:0;width: 322px;}
+#micrositeContentColumnFull .introText h3{float:left;margin:15px 0 .5em;}
+#micrositeContentColumnFull .introText p{font-size: 14px;float: left; line-height: 1.5;margin:0;  width: 615px;}
 #micrositeContentColumnLeft { float: left; width: 620px; }
 #micrositeContentColumnRight { float: right; width: 300px; }
-#micrositeContentColumnRight .resources h3{color:#ac1f82;font-family: 'LubalinGraph', Arial, sans-serif; font-size: 20px;font-weight:400;line-height:1.3;margin: 0 0 10px !important;}
+#micrositeContentColumnRight .resources h3{color:#ac1f82;font-family: 'LubalinGraph', Arial, sans-serif; font-size: 20px;font-weight:400;line-height:1.25em;margin: 0 0 10px !important;}
 #micrositeContentColumnRight .resources img{float: left; margin:3px 10px 0 5px;}
 #micrositeContentColumnRight .blog{margin: 30px 0 0;}
 #micrositeContentColumnRight .blog h3{color:#ac1f82;font-family: 'LubalinGraph', Arial, sans-serif; font-size: 20px;font-weight:400;line-height:1.3;margin: 0 0 10px !important;}
@@ -112,7 +112,7 @@ audio, canvas, video { display: inline-block; *display: inline; *zoom: 1; }
 .mediaBlock img { float: left; margin-right: 10px; display: block; }
 
 /* header */
-#micrositeHeader { clear:both; position: relative; margin: 0; background: #ac1f82 url(../images/ibm-logo.png) no-repeat 870px 14px; }
+#micrositeHeader { clear:both;margin: 0; background: #ac1f82 url(../images/ibm-logo.png) no-repeat 870px 14px; }
 #micrositeHeaderBanner p { margin: 0 !important; }
 #micrositeHeaderBanner h1 { margin: 0 0 0 22px; color: #fff; font-size: 24px !important; font-weight: 400; line-height: 62px;  -webkit-margin-before: 0 !important; -webkit-margin-after: 0 !important; 	}
 
@@ -191,6 +191,7 @@ audio, canvas, video { display: inline-block; *display: inline; *zoom: 1; }
 
 .featuredVideo {
   border: 1px solid #ab1f80;
+  clear:both;
   margin: 0 0 18px;
   padding: 10px 0 10px 10px;
   position: relative;
@@ -338,7 +339,8 @@ audio, canvas, video { display: inline-block; *display: inline; *zoom: 1; }
 .contentTabsNav li a {
   color: black !important;
   display: block;
-  font-size: 11px;
+  font-size: 10px;
+  font-weight: bold;
   text-transform: uppercase;
   padding: 10px;
   max-height: 38px; }
@@ -350,7 +352,8 @@ audio, canvas, video { display: inline-block; *display: inline; *zoom: 1; }
   color: white !important;
   background-color: #00679c !important;
   border-bottom: none;
-  font-size: 11px;
+  font-size: 10px;
+  font-weight: bold;
   position: relative; }
 
 .contentTabsPanel {
@@ -552,4 +555,5 @@ audio, canvas, video { display: inline-block; *display: inline; *zoom: 1; }
   color: #ac1f82;
   font-family: 'LubalinGraph', Arial, sans-serif;
   font-size: 20px;
+  line-height: 1.25em;
   margin: 0 0 10px !important; }
